--- a/src/commponents/WebPageComponents/IndexPage/Principle/Principle.css
+++ b/src/commponents/WebPageComponents/IndexPage/Principle/Principle.css
@@ -10,7 +10,7 @@
     width: 80vw;
     margin: 5vh 0 5vh 10vw;
     /* margin: 5vh 0 5vh 11vw; */
-    /* border: 1px solid black; */
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -19,7 +19,7 @@
 .Principle section .Img-Container {
     height: 37vh;
     width: 37vh;
-    margin-left: 2vw;
+    margin-left: 1vw;
     background-color: rgb(245, 245, 245);
     display: flex;
     flex-direction: column;
@@ -71,14 +71,14 @@
 }
 
 .ourPrinciplesHeading {
-    font-size: 1.4rem;
+    font-size: 26.23px;
     color: #0A66C2;
     font-weight: bolder;
 }
 
 .ourPrinciplesTop p,
 .ourPrinciplesBottom p {
-    font-size: 0.65rem;
+    font-size: 11.66px;
     color: #333333;
 }
 
@@ -88,8 +88,8 @@
 
 .ourPrinciples {
     /* border: 1px solid black; */
-    width: 15vw;
-    margin-right: 4vw;
+    width: auto;
+    margin-right: 6.5vw;
 }
 
 
@@ -113,7 +113,7 @@
     .Principle section .Img-Container {
         height: 363.1px;
         width: 355.4px;
-        margin-left: 2vw;
+        margin-left: 0.75vw;
     }
 
     .Principle section .Img-Container b {
@@ -149,25 +149,25 @@
     .ourPrinciples {
         /* border: 1px solid black; */
         width: auto;
-        margin-right: 0.65vw;
+        margin-right: 4.5vw;
     }
 }
 
 /* responsive for 1440px width */
 @media(width=1440px) {
     .ourPrinciplesHeading {
-        font-size: 1.4rem;
+        font-size: 27px;
     }
 
     .ourPrinciplesTop p,
     .ourPrinciplesBottom p {
-        font-size: 0.65rem;
+        font-size: 12px;
     }
 
     .Principle section .Img-Container {
         height: 33vh;
         width: 33vh;
-        margin-left: 2vw;
+        margin-left: 0.75vw;
     }
 
     .Principle section .Img-Container b {
@@ -202,8 +202,8 @@
 
     .ourPrinciples {
         /* border: 1px solid black; */
-        width: 17vw;
-        margin-right: 4vw;
+        width: auto;
+        margin-right: 6vw;
     }
 }
 
